Bug 398980 - Krename window style is weird
Summary: Krename window style is weird
Status: RESOLVED FIXED
Alias: None
Product: krename
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Heiko Becker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-23 09:26 UTC by Andy
Modified: 2022-08-31 21:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.2
Sentry Crash Report:


Attachments
Screenshot of the maximized window (31.31 KB, image/png)
2020-10-19 17:50 UTC, Andy
Details
screenshot (136.66 KB, image/png)
2022-08-31 19:26 UTC, Heiko Becker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andy 2018-09-23 09:26:12 UTC
SUMMARY

For renaming photos according to their EXIF data, I need a long text due to reg expression.

e.g. "[1-4{[exifExif.Photo.DateTimeOriginal]}][6-7{[exifExif.Photo.DateTimeOriginal]}][9-10{[exifExif.Photo.DateTimeOriginal]}]_[12-13{[exifExif.Photo.DateTimeOriginal]}][15-16{[exifExif.Photo.DateTimeOriginal]}][18-19{[exifExif.Photo.DateTimeOriginal]}][21-22{[exifExif.Photo.DateTimeOriginal]}] - "

This leads to a window size of krename which far over the set screen size. This makes working with this app not easy.

This behavior continues for other renaming procedures (out of jpgs) since the regex from above is in the text cache

When the text cache is cleard krename displays as it should.

STEPS TO REPRODUCE
1.  Test the regex above

SOFTWARE VERSIONS

Tested with Arch Linux and Debian 10 Testing. Actual versions 2018-09-23

ADDITIONAL INFORMATION

Thanks to all guys for working at KDE-Software and Plasma
Comment 1 Heiko Becker 2020-10-05 13:52:31 UTC
Sorry, for the late reply, but I can't really reproduce this at the moment with the given regular expression. Maybe you can be more specific where/how this happens. Thank you in advance.
Comment 2 Andy 2020-10-19 17:50:14 UTC
Created attachment 132568 [details]
Screenshot of the maximized window

Hope my screenshot makes something clearer.

Best Regards
Andy
Comment 3 Christoph Feck 2020-10-21 20:39:22 UTC
Thanks for the update; changing status.

The long EXIF data text is probably in a different tab, but affects the minimum size of the complete window.
Comment 4 Heiko Becker 2022-08-31 19:26:33 UTC
If I use this regex the window still looks normal like in the screenshot
Comment 5 Heiko Becker 2022-08-31 19:26:59 UTC
Created attachment 151741 [details]
screenshot
Comment 6 Heiko Becker 2022-08-31 20:35:45 UTC
Never mind, sorry, it has to be in the history to  cause this.
Comment 7 Heiko Becker 2022-08-31 21:17:22 UTC
Git commit cedc51151941495a9bb67b3b679c520e5b49e3a8 by Heiko Becker.
Committed on 31/08/2022 at 20:57.
Pushed by heikobecker into branch '5.0'.

Prevent resizing issues with huge history entries

A long entry in the history of the Template combo box can lead to a
huge, unresizeable Window.
Setting the minimum width of he main window to some artifical minimum
value works around that, until a better fix is found.
FIXED-IN: 5.0.2

M  +7    -0    src/krenamewindow.cpp

https://invent.kde.org/utilities/krename/commit/cedc51151941495a9bb67b3b679c520e5b49e3a8