Prevent resizing issues with huge history entries

A long entry in the history of the Template combo box can lead to a
huge, unresizeable Window.
Setting the minimum width of he main window to some artifical minimum
value works around that, until a better fix is found.

BUG: 398980
FIXED-IN: 5.0.2